--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="information2.html">特徴</a></li>
     </ul>
 
-    <img src="img/kaf1.jpg" alt="">
+    <img src="kaf1.jpg" alt="">
 
     <p>花譜とはYouTubeや各種SNSで活躍するバーチャルシンガーである。<br>
     チャンネル登録者は70万人を超えている。</p>
