--- a/informaton.html
+++ b/informaton.html
@@ -20,7 +20,7 @@
         <li><a href="information2.html">特徴</a></li>
     </ul>
 
-    <img src="img/kaf2.jpg" alt="">
+    <img src="kaf2.jpg" alt="">
 
     <h2 class="subtitle">人物</h2>
 
